@@ -1,3 +1,12 @@
+Fri Oct  7 18:25:11 2005  root  <root@mako.isislab.vanderbilt.edu>
+
+	* tools/Config_Handlers/ADD_Handler.cpp
+	* tools/Config_Handlers/DP_Handler.cpp
+	* tools/Config_Handlers/IDD_Handler.cpp
+	* tools/Config_Handlers/MDD_Handler.cpp
+
+	Fix runtime error. 
+
 Fri Oct  7 16:18:40 2005  root  <root@mako.isislab.vanderbilt.edu>
 
 	* tools/Config_Handlers/Config_Handlers.mpc
